# web-transport

./: .gitignore  .release-plz.toml  CLAUDE.md  Cargo.toml  README.md  biome.jsonc  flake.nix  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-plz.toml
.github/workflows/: pr.yml  release-js.yml  release-kt.yml  release-py.yml  release-rs.yml  release-swift.yml  release.yml
js/common/: package.ts  release.ts
js/qmux/: README.md  package.json  tsconfig.json
js/qmux/examples/: client.ts
js/qmux/src/: credit.test.ts  credit.ts  error.ts  frame.test.ts  frame.ts  index.ts  recv.test.ts  recv.ts  scheduler.test.ts  scheduler.ts  session.test.ts  session.ts  stream.ts  subprotocol.test.ts  varint.ts  wire-format.test.ts
js/qmux/tests/: interop.test.ts
js/web-demo/: package.json
js/web-socket-stream/: README.md  package.json  tsconfig.json
js/web-socket-stream/src/: index.test.ts  index.ts
js/web-transport/: .gitignore  README.md  index.d.ts  index.js  napi.cjs  napi.d.cts  napi.d.ts  package.json  tsconfig.json
js/web-transport-ws/: README.md  package.json
js/web-transport/scripts/: release.ts
js/web-transport/src/: datagrams.ts  index.ts  request.ts  server.ts  session.ts
kt/web-transport/: android.gradle.kts  build.gradle.kts
py/web-transport/: README.md  pyproject.toml
py/web-transport/python/web_transport/: __init__.py  _crypto.py  _errors.py  _web_transport.pyi
py/web-transport/tests/: conftest.py
py/web-transport/tests/browser_interop/: conftest.py  test_bidi_streams.py  test_concurrency.py  test_concurrent_accept.py  test_connection.py  test_datagrams.py  test_error_propagation.py  test_sequential_sessions.py  test_session_request.py  test_stream_edge_cases.py  test_uni_streams.py
py/web-transport/tests/integration/: conftest.py  test_client.py  test_datagrams.py  test_echo.py  test_sequential_sessions.py  test_server.py  test_session_lifecycle.py  test_stream_reset.py  test_streams.py
py/web-transport/tests/unit/: test_cert.py  test_config.py  test_exceptions.py
qmux/: .gitignore  CHANGELOG.md  Cargo.toml  package.json  pnpm-lock.yaml
qmux/examples/: client.ts
qmux/scripts/: release.ts
qmux/src/: client.rs  credit.rs  credit.ts  error.rs  frame.rs  frame.ts  index.ts  lib.rs  server.rs  session.rs  session.ts  stream.rs  stream.ts  tcp.rs  tls.rs  transport.rs  ws.rs
qmux/src/proto/: frame.rs  mod.rs  params.rs  version.rs
rs/qmux/: CHANGELOG.md  Cargo.toml  README.md
rs/qmux/examples/: h3qx.rs  interop-client.rs  interop-server.rs
rs/qmux/src/: alpn.rs  config.rs  error.rs  lib.rs  protocol.rs  sched.rs  session.rs  stream.rs  tcp.rs  tls.rs  transport.rs  uds.rs  ws.rs
rs/qmux/tests/: backpressure.rs  datagram.rs  negotiation.rs  priority.rs  (+3 more)
rs/web-transport/: CHANGELOG.md  Cargo.toml  README.md
rs/web-transport-ffi/: CHANGELOG.md  Cargo.toml  build.sh  pyproject.toml
rs/web-transport-ffi/src/: client.rs  error.rs  ffi.rs  lib.rs  recv_stream.rs  send_stream.rs  server.rs  session.rs  test.rs
rs/web-transport-iroh/: CHANGELOG.md  Cargo.toml  README.md
rs/web-transport-iroh/src/: client.rs  recv.rs  send.rs  session.rs  tests.rs
rs/web-transport-node/: CHANGELOG.md  Cargo.toml
rs/web-transport-node/src/: lib.rs
rs/web-transport-noq/: CHANGELOG.md  Cargo.toml
rs/web-transport-proto/: CHANGELOG.md  Cargo.toml
rs/web-transport-python/: Cargo.toml
rs/web-transport-python/src/: client.rs  errors.rs  lib.rs  recv_stream.rs  runtime.rs  send_stream.rs  server.rs  session.rs
rs/web-transport-quiche/: CHANGELOG.md  Cargo.toml  README.md
rs/web-transport-quinn/: CHANGELOG.md  Cargo.toml
rs/web-transport-trait/: CHANGELOG.md  Cargo.toml  README.md
rs/web-transport-wasm/: CHANGELOG.md  Cargo.toml  README.md
rs/web-transport-ws/: CHANGELOG.md  Cargo.toml  README.md
web-demo/: client.js
web-transport/: CHANGELOG.md  Cargo.toml
web-transport-any/: Cargo.toml
web-transport-any/src/: lib.rs
web-transport-browser-tests/: Cargo.toml
web-transport-browser-tests/src/: browser.rs  cert.rs  harness.rs  js.rs  lib.rs  server.rs
web-transport-browser-tests/tests/: bidi_stream.rs  concurrent.rs  concurrent_accept.rs  connection.rs  datagram.rs  smoke.rs  stream_error.rs  uni_stream.rs
web-transport-browser-tests/tests/common/: mod.rs
web-transport-node/: Cargo.toml  package.json  tsconfig.json
web-transport-node/src/: lib.rs
web-transport-node/ts/: datagrams.ts  session.ts
web-transport-noq/: CHANGELOG.md  Cargo.toml  README.md
web-transport-noq/examples/: echo-client-advanced.rs  echo-client.rs  echo-server-advanced.rs
web-transport-noq/src/: client.rs  crypto.rs  error.rs  recv.rs  server.rs  session.rs  settings.rs
web-transport-proto/: CHANGELOG.md  Cargo.toml
web-transport-proto/src/: capsule.rs  connect.rs  frame.rs  lib.rs  qpack.rs  settings.rs
web-transport-quiche/: CHANGELOG.md  Cargo.toml
web-transport-quiche/examples/: echo-client.rs  echo-server.rs
web-transport-quiche/src/: client.rs  connection.rs  lib.rs  server.rs
web-transport-quiche/src/ez/: client.rs  connection.rs  driver.rs  mod.rs  recv.rs  send.rs  server.rs  tls.rs
web-transport-quiche/src/h3/: connect.rs  request.rs
web-transport-quinn/: CHANGELOG.md  Cargo.toml  README.md
web-transport-quinn/examples/: README.md  echo-client-advanced.rs  echo-client.rs  echo-server-advanced.rs  echo-server.rs  multiproto-client.rs  multiproto-server.rs
web-transport-quinn/src/: client.rs  connect.rs  error.rs  lib.rs  recv.rs  send.rs  server.rs  session.rs  settings.rs
web-transport-trait/: CHANGELOG.md  Cargo.toml
web-transport-trait/src/: lib.rs
web-transport-wasm/: CHANGELOG.md  Cargo.toml  README.md
web-transport-wasm/src/: client.rs  recv.rs  session.rs
web-transport-ws/: CHANGELOG.md  Cargo.toml  README.md  draft.md  package-lock.json  package.json  pnpm-lock.yaml
web-transport-ws/examples/: client.rs  server.rs
web-transport-ws/src/: client.rs  error.rs  frame.ts  index.ts  lib.rs  protocol.rs  server.rs  session.rs  session.ts
web-transport/src/: quinn.rs  wasm.rs
(+79 files in other folders)
