[workspace]
members = [
    "web-transport",
    "web-transport-proto",
    "web-transport-quiche",
    "web-transport-quinn",
    "web-transport-trait",
    "web-transport-wasm",
    "web-transport-ws",
]
resolver = "2"

[workspace.dependencies]
web-transport-proto = { path = "web-transport-proto", version = "0.5" }
web-transport-trait = { path = "web-transport-trait", version = "0.3" }
