[workspace]
members = [
    "rs/qmux",
    "rs/web-transport",
    "rs/web-transport-iroh",
    "rs/web-transport-node",
    "rs/web-transport-noq",
    "rs/web-transport-proto",
    "rs/web-transport-python",
    "rs/web-transport-quiche",
    "rs/web-transport-quinn",
    "rs/web-transport-trait",
    "rs/web-transport-wasm",
    "rs/web-transport-ws",
]
resolver = "2"

[workspace.dependencies]
web-transport-proto = { path = "rs/web-transport-proto", version = "0.6" }
web-transport-trait = { path = "rs/web-transport-trait", version = "0.3" }

[patch.crates-io]
noq = { git = "https://github.com/n0-computer/noq", branch = "main" }
noq-proto = { git = "https://github.com/n0-computer/noq", branch = "main" }
noq-udp = { git = "https://github.com/n0-computer/noq", branch = "main" }
iroh = { git = "https://github.com/n0-computer/iroh", branch = "main" }
