[package]
name = "web-transport-browser-tests"
description = "Browser interoperability test infrastructure for web-transport"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
chromiumoxide = { version = "0.9", default-features = false, features = [
    "bytes",
    "fetcher",
    "rustls",
    "zip8",
] }
futures = "0.3"
rcgen = { version = "0.14", default-features = false, features = ["aws_lc_rs"] }
rustls = { version = "0.23", default-features = false, features = [
    "aws-lc-rs",
    "std",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "0.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[dependencies.web-transport-quinn]
path = "../web-transport-quinn"

[dev-dependencies]
bytes = "1"
http = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
