[package]
name = "web-transport-ws"
description = "WebTransport polyfill using WebSockets"
authors = ["Luke Curley"]
repository = "https://github.com/moq-dev/web-transport"
license = "MIT OR Apache-2.0"

version = "0.2.4"
edition = "2021"

keywords = ["quic", "http3", "webtransport", "websocket", "polyfill"]
categories = ["network-programming", "web-programming"]

[features]
default = []
rustls-tls-native-roots = ["tokio-tungstenite/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["tokio-tungstenite/rustls-tls-webpki-roots"]

[dependencies]
bytes = "1"
futures = "0.3"
thiserror = "2"
tokio = { version = "1", features = ["sync", "time", "macros", "rt"] }
tokio-tungstenite = "0.24"
web-transport-proto = { workspace = true }
web-transport-trait = { workspace = true }

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
