[package]
name = "web-transport-ws"
description = "Deprecated: use the `qmux` crate instead"
authors = ["Luke Curley"]
repository = "https://github.com/moq-dev/web-transport"
license = "MIT OR Apache-2.0"

version = "0.4.0"
edition = "2021"

keywords = ["quic", "http3", "webtransport", "websocket", "polyfill"]
categories = ["network-programming", "web-programming"]

[features]
default = []
rustls-tls-native-roots = ["tokio-tungstenite/rustls-tls-native-roots", "qmux/wss-native-roots"]
rustls-tls-webpki-roots = ["tokio-tungstenite/rustls-tls-webpki-roots", "qmux/wss-webpki-roots"]

[dependencies]
qmux = { path = "../qmux", default-features = false, features = ["ws"] }
tokio = { version = "1", features = ["sync", "time", "macros", "rt"] }
tokio-tungstenite = "0.24"
web-transport-trait = { workspace = true }

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
