[package]
name = "web-transport-iroh"
description = "WebTransport library for Iroh"
authors = ["Franz Heinzmann <frando@n0.computer>"]
repository = "https://github.com/moq-dev/web-transport"
license = "MIT OR Apache-2.0"
version = "0.3.0"
edition = "2024"

keywords = ["quic", "http3", "webtransport", "iroh"]
categories = ["network-programming", "web-programming"]

[features]
default = ["ring"]
ring = ["iroh/tls-ring"]
aws-lc-rs = ["iroh/tls-aws-lc-rs"]

[dependencies]
bytes = "1"
http = "1"
iroh = { version = "0.98.1", default-features = false, features = [
    "metrics",
    "fast-apple-datapath",
    "portmapper",
] }
n0-error = "0.1.2"
n0-future = "0.3.1"
tokio = { version = "1", default-features = false, features = [
    "io-util",
    "macros",
] }
tracing = "0.1.41"
url = "2"
web-transport-proto = { workspace = true }
web-transport-trait = { workspace = true }

[dev-dependencies]
n0-tracing-test = "0.3.0"
tokio = { version = "1", features = ["full"] }
