[package]
name = "web-transport-python"
description = "WebTransport PyO3 bindings for Python"
authors = ["ai-and-i"]
repository = "https://github.com/moq-dev/web-transport"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[lib]
name = "_web_transport"
crate-type = ["cdylib"]

[features]
extension-module = ["pyo3/extension-module"]

[dependencies]
bytes = "1"
http = "1"
pyo3 = "0.28"
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
quinn = { version = "0.11", default-features = false, features = ["rustls-ring", "runtime-tokio"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-native-certs = "0.8"
rustls-pki-types = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
tokio-util = "0.7"
url = "2"
web-transport-quinn = { path = "../web-transport-quinn", version = "0.11" }
